--- a/index.htm
+++ b/index.htm
@@ -29,7 +29,7 @@
                 <li><a href="">Menu</a</li>
                 <li><a href="">About Us</a></li>      
                 <li><a href="">Reviews</a></li>      
-                <!-- <li><a href="" class="close"><i class="fas fa-times"></i></a></li>       -->
+                <li class="close"><i class="fas fa-times"></i></li>      
             </ul>
         </div>
         <div class="contact">
